--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ date_format: "%B %d, %Y"
 
 # Layout
 
-show_excerpts: true        # show article excerpts on the home page
+show_social: true          # show site description and social links in the footer
+show_excerpts: false        # show article excerpts on the home page
 show_frame: true           # adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
 minimal: false             # use a dark header
@@ -16,11 +17,11 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: Home Change, icon: home}
-  - {file: "README.md", title: About me, icon: address-card}
+  - {file: "index.html", title: "Home Change", icon: home}
+  - {file: "README.md", title: "About" me, icon: address-card}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "tomatenk101@gmail.com"}
+  - {title: Mail, icon: envelope, url: "mailto:tomatenk101@gmail.com"}
   - {title: Github, icon: github, url: "https://github.com/TomaKatze"}
   
 
