--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Lillian Yip"
-author: "Lillian"
-description: "About me"
+author: "Lillian Yip"
+description: "Professional Certificate in Data Analytics"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
