--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "LinkedIn", url: "https://www.linkedin.com/in/lillianyip/"}
+  - {title: "LinkedIn", url: "https://www.linkedin.com/in/lillianyip/"}
  
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
